--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^3.0.0-beta.6",
     "axios": "^0.27.2",
     "express": "^4.18.1",
     "install": "^0.13.0",
@@ -20,6 +21,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-simple-image-slider": "^2.4.1",
     "redux": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
